# synthevix-cli

./: .gitignore  README.md  Synthevix_PRD_v1.0.md  pyproject.toml
docs/plans/: 2026-03-02-add-missing-features.md  2026-03-02-full-overhaul-design.md  2026-03-02-full-overhaul.md  2026-03-02-missing-features-design.md
synthevix/: __init__.py  config_commands.py  main.py  menu.py
synthevix/assets/: quotes.json
synthevix/brain/: commands.py  display.py  models.py
synthevix/core/: banner.py  config.py  database.py  sound.py  themes.py  utils.py
synthevix/cosmos/: ai.py  commands.py  display.py  greetings.py  models.py  quotes.py  reflect.py  weather.py
synthevix/dashboard/: app.py  modals.py  styles.tcss
synthevix/dashboard/widgets/: brain_widget.py  cosmos_widget.py  forge_widget.py  profile_widget.py  quest_widget.py
synthevix/forge/: commands.py  display.py  git_helpers.py  models.py  templates.py
synthevix/quest/: achievements.py  commands.py  display.py  models.py  pomodoro.py  xp.py
tests/: test_brain.py  test_cosmos.py  test_forge.py  test_quest.py
