[tool.poetry]
name = "synthevix"
version = "1.0.0"
description = "Your Personal Terminal Command Center"
authors = ["Commander"]
readme = "README.md"
license = "MIT"
packages = [{include = "synthevix"}]

[tool.poetry.scripts]
synthevix = "synthevix.main:main"

[tool.poetry.dependencies]
python = "^3.11"
typer = {version = ">=0.15.0"}
rich = ">=13.7.0"
toml = "^0.10.2"
requests = "^2.31.0"
questionary = ">=2.0.0"
textual = "^0.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.12.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".venv",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = false
ignore_missing_imports = true
exclude = [
  ".venv/",
]
